modification-page-produit

--- a/index-4.html
+++ b/index-4.html
@@ -53,7 +53,9 @@
       </section>
       <section class="w-full grid grid-cols-2 md:grid-cols-4 gap-8 mb-12">
         <figure class="flex flex-col items-center">
+          <a href="./index-produit.html">
           <img src="./assets/Ami-gris-pp.svg" alt="Ami Paris gris" class="w-80 h-80 object-contain bg-border rounded" />
+          </a>
           <figcaption class="mt-4 text-left w-full pl-5 ">
             <h2 class="font-title text-2xl mb-2 ">AMI PARIS</h2>
             <p class="font-roboto text-sub mb-2">Pull Col Rond Ami De Coeur En Laine</p>
