--- a/index-produit-3.html
+++ b/index-produit-3.html
@@ -47,12 +47,12 @@
             </figure>
             </a>
             <figure class="w-full flex-1">
-          <img src="./assets/pp-femme.svg" alt="thumb3" class="w-full h-full object-cover bg-border rounded border border-black" />
+          <img src="./assets/pp-dos-Ami.png" alt="thumb3" class="w-full h-full object-cover bg-border rounded border border-black" />
             </figure>
         </aside>
 
         <figure class="w-full md:w-1/2 bg-border rounded p-8 flex items-center justify-center relative">
-            <img src="./assets/pp-femme.svg" alt="AMI Paris pull" class="w-full h-auto max-h-800px object-contain" />
+            <img src="./assets/pp-dos-Ami.png" alt="AMI Paris pull" class="w-full h-auto max-h-800px object-contain" />
         </figure>
 
         <section class="col-span-4 flex flex-col gap-6">
