--- a/index-produit.html
+++ b/index-produit.html
@@ -48,7 +48,7 @@
             </a>
             <a href="./index-produit-3.html">
             <figure class="w-full flex-1">
-          <img src="./assets/pp-femme.svg" alt="thumb3" class="w-full h-full object-cover bg-border rounded" />
+          <img src="./assets/pp-dos-Ami.png" alt="thumb3" class="w-full h-full object-cover bg-border rounded" />
             </figure>
             </a>
         </aside>
