--- a/index-produit-2.html
+++ b/index-produit-2.html
@@ -83,6 +83,7 @@
               <option value="5">5</option>
             </select>
           </fieldset>
+          <button class="bg-black text-primary font-title text-lg rounded px-6 py-4 hover:bg-sub hover:text-black transition-colors duration-200">AJOUTER AU PANIER</button>
 
           <article class="border border-border p-6 rounded gap-2" aria-labelledby="availability-title">
             <header class="flex items-center gap-2">
@@ -121,8 +122,15 @@
           </div>
         </section>
 
-      
-      
+        <section class="promo-yellow w-full max-w-6xl mx-auto mt-12 px-8 py-8 rounded-lg overflow-hidden flex flex-col md:flex-row items-center gap-6">
+          <img src="./assets/Ami-banner.svg" alt="promo" class="w-full md:w-1/2 object-cover rounded" />
+          <div class="promo-text md:pl-6">
+            <h3 class="font-title text-3xl mb-4">TOUTE LES TENDANCES</h3>
+            <p class="font-roboto text-sub mb-6">Retrouvez les dernières tendances Homme et les marques les plus désirables du moment soigneusement sélectionnées par les Galeries Lafayette.</p>
+            <a href="#" class="promo-btn inline-block rounded-full px-6 py-3 font-title">DÉCOUVRIR</a>
+          </div>
+        </section>
+
         <footer class="w-screen bg-black text-primary py-12 mt-30">
         <section class="max-w-6xl mx-auto grid grid-cols-2 md:grid-cols-4 gap-8 mb-8">
           <article>
