--- a/index-produit-3.html
+++ b/index-produit-3.html
@@ -81,6 +81,7 @@
               <option value="5">5</option>
             </select>
           </fieldset>
+          <button class="bg-black text-primary font-title text-lg rounded px-6 py-4 hover:bg-sub hover:text-black transition-colors duration-200">AJOUTER AU PANIER</button>
 
           <article class="border border-border p-6 rounded gap-2" aria-labelledby="availability-title">
             <header class="flex items-center gap-2">
