--- a/pages/index-produit-2.html
+++ b/pages/index-produit-2.html
@@ -10,7 +10,7 @@
   <body class="flex min-h-screen flex-col items-center">
     <header class="flex w-full flex-row items-center justify-between px-8 py-4">
       <section class="flex items-center">
-        <a href="./index-3.html"><img class="h-12" src="./assets/Logo_galeries_lafayette-removebg-preview 1.png" alt="Logo" /></a>
+        <a href="/pages/index-3.html"><img class="h-12" src="/public/Logo_galeries_lafayette-removebg-preview 1.png" alt="Logo" /></a>
         <nav class="ml-8">
           <ul class="flex flex-row space-x-6">
             <li class="font-title text-2xl"><a href="#">FAVORIS</a></li>
@@ -22,37 +22,39 @@
       <aside class="flex flex-row  space-x-4">
         <form class="bg-primary border-sub flex items-center rounded border px-2 py-1">
           <input class="bg-primary font-roboto max-w-fit outline-none" type="text" placeholder="Marques, catégories, articles..." />
-          <button type="submit"><img class="ml-2 h-5" src="./assets/search.png" alt="Rechercher" /></button>
+          <button type="submit"><img class="ml-2 h-5" src="/public/search.png" alt="Rechercher" /></button>
         </form>
-        <button aria-label="Profil"><img class="h-6" src="./assets/profile.png" alt="Profil"/></button>
-        <button aria-label="Panier"><img class="h-6" src="./assets/cart.png" alt="Panier"/></button>
+        <button aria-label="Profil"><img class="h-6" src="/public/profile.png" alt="Profil"/></button>
+        <button aria-label="Panier"><img class="h-6" src="/public/cart.png" alt="Panier"/></button>
       </aside>
     </header>
 
   <main class="mx-auto mt-12 flex flex-1 flex-col justify-center w-full max-w-6xl gap-8 px-8">
       <nav class="w-full mb-8">
-        <a href="./index-4.html" class="flex items-center text-black font-roboto text-lg hover:text-sub"><span class="text-2xl mr-2">&#8592;</span> Retour</a>
+        <a href="/pages/index-4.html" class="flex items-center text-black font-roboto text-lg hover:text-sub"><span class="text-2xl mr-2">&#8592;</span> Retour</a>
       </nav>
 
       <section class="flex flex-row items-start gap-8 w-full">
         <aside class="w-28 flex flex-col gap-4 h-560px">
-            <a href="./index-produit.html">
+            <a href="/pages/index-produit.html">
             <figure class="w-full flex-1">
-          <img src="./assets/Ami-gris-pp.svg" alt="thumb1" class="w-full h-full object-cover bg-border rounded " />
+          <img src="/public/Ami-gris-pp.svg" alt="thumb1" class="w-full h-full object-cover bg-border rounded " />
             </figure>
             </a>
-            <a href="./index-produit-2.html">
+            <a href="/pages/index-produit-2.html">
             <figure class="w-full flex-1">
-          <img src="./assets/pp-homme.svg" alt="thumb2" class="w-full h-full object-cover bg-border rounded" />
+          <img src="/public/pp-homme.svg" alt="thumb2" class="w-full h-full object-cover bg-border rounded border border-black" />
+          </figure>
+          </a>
+            <a href="/pages/index-produit-3.html">
+            <figure class="w-full flex-1">
+          <img src="/public/pp-dos-Ami.png" alt="thumb3" class="w-full h-full object-cover bg-border rounded" />
             </figure>
             </a>
-            <figure class="w-full flex-1">
-          <img src="./assets/pp-dos-Ami.png" alt="thumb3" class="w-full h-full object-cover bg-border rounded border border-black" />
-            </figure>
         </aside>
 
         <figure class="w-full md:w-1/2 bg-border rounded p-8 flex items-center justify-center relative">
-            <img src="./assets/pp-dos-Ami.png" alt="AMI Paris pull" class="w-full h-auto max-h-800px object-contain" />
+            <img src="/public/pp-homme.svg" alt="AMI Paris pull" class="w-full h-auto max-h-800px object-contain" />
         </figure>
 
         <section class="col-span-4 flex flex-col gap-6">
@@ -85,15 +87,15 @@
           <article class="border border-border p-6 rounded gap-2" aria-labelledby="availability-title">
             <header class="flex items-center gap-2">
                 <figure class="flex gap-4 items-center ml-2">
-                  <img src="./assets/loc.svg" alt="store" class="h-5 ml-2.5 " />
+                  <img src="/public/loc.svg" alt="store" class="h-5 ml-2.5 " />
                 <strong id="availability-title">Magasin Galeries Lafayette Limoges</strong>
                </figure>
             </header>
             <figure class="flex flex-row gap-2 items-center" aria-label="Disponibilité">
-                <img class="flex align-left" src="./assets/check.svg" alt="" />
+                <img class="flex align-left" src="/public/check.svg" alt="" />
                 <figcaption class="text-element-green font-bold">Disponible en click & collect</figcaption>
             </figure>
-            <img src="./assets/credit-card.svg" alt="Moyens de paiement acceptés">
+            <img src="/public/credit-card.svg" alt="Moyens de paiement acceptés">
           </article>
 
         </section>
@@ -105,16 +107,16 @@
           <h2 class="font-title text-4xl mb-6">VU RÉCEMMENT</h2>
           <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
             <article class="bg-border rounded p-4">
-              <img src="./assets/Jacquemus.svg" alt="recent 1" class="w-full object-cover h-48 rounded" />
+              <img src="/public/Jacquemus.svg" alt="recent 1" class="w-full object-cover h-48 rounded" />
             </article>
            <article class="bg-border rounded p-4">
-              <img src="./assets/echarpe.svg" alt="recent 2" class="w-full object-cover h-48 rounded" />
+              <img src="/public/echarpe.svg" alt="recent 2" class="w-full object-cover h-48 rounded" />
             </article>
             <article class="bg-border rounded p-4">
-              <img src="./assets/Ami-jaune.svg" alt="recent 3" class="w-full object-cover h-48 rounded" />
+              <img src="/public/Ami-jaune.svg" alt="recent 3" class="w-full object-cover h-48 rounded" />
             </article>
             <article class="bg-border rounded p-4">
-              <img src="./assets/NB.svg" alt="recent 4" class="w-full object-cover h-48 rounded" />
+              <img src="/public/NB.svg" alt="recent 4" class="w-full object-cover h-48 rounded" />
             </article>
           </div>
         </section>
@@ -192,18 +194,18 @@
           <ul class="flex flex-row gap-4">
            
             <li class="flex flex-col items-center">
-              <a class="bg-primary rounded-2xl " href="#"><img src="./assets/Facebook.png" alt="Facebook" class="h-6 w-6" /></a>
+              <a class="bg-primary rounded-2xl " href="#"><img src="/public/Facebook.png" alt="Facebook" class="h-6 w-6" /></a>
             </li>
             <li class="flex flex-col items-center">
-              <a class="bg-primary rounded-2xl" href="#"><img src="./assets/Instagram.png" alt="Instagram" class="h-6 w-6" /></a>
-            </li>
-
-            <li class="flex flex-col items-center">
-              <a class="bg-primary rounded-2xl" href="#"><img src="./assets/pinterest-p.svg" alt="Pinterest" class="h-6 w-6" /></a>
+              <a class="bg-primary rounded-2xl" href="#"><img src="/public/Instagram.png" alt="Instagram" class="h-6 w-6" /></a>
             </li>
 
             <li class="flex flex-col items-center">
-              <a class="bg-primary rounded-2xl" href="#"><img src="./assets/tiktok.svg" alt="TikTok" class="h-6 w-6" /></a>
+              <a class="bg-primary rounded-2xl" href="#"><img src="/public/pinterest-p.svg" alt="Pinterest" class="h-6 w-6" /></a>
+            </li>
+
+            <li class="flex flex-col items-center">
+              <a class="bg-primary rounded-2xl" href="#"><img src="/public/tiktok.svg" alt="TikTok" class="h-6 w-6" /></a>
             </li>
             
           </ul>
