--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#">
           <img
             class="h-12"
-            src="./assets/Logo_galeries_lafayette-removebg-preview 1.png"
+            src="/public/Logo_galeries_lafayette-removebg-preview 1.png"
             alt="Logo"
           />
         </a>
@@ -40,14 +40,14 @@
             placeholder="Marques, catégories, articles..."
           />
           <button type="submit">
-            <img class="ml-2 h-5" src="./assets/search.png" alt="Rechercher" />
+            <img class="ml-2 h-5" src="/public/search.png" alt="Rechercher" />
           </button>
         </form>
         <button aria-label="Profil">
-          <img class="h-6" src="./assets/profile.png" alt="Profil" />
+          <img class="h-6" src="/public/profile.png" alt="Profil" />
         </button>
         <button aria-label="Panier">
-          <img class="h-6" src="./assets/cart.png" alt="Panier" />
+          <img class="h-6" src="/public/cart.png" alt="Panier" />
         </button>
       </aside>
     </header>
@@ -64,10 +64,10 @@
         <form class="flex flex-col border-sub relative w-full max-w-md rounded border">
             <span class="text-sub pt-2 pl-4 font-roboto">Entrer votre code postal</span>
             <a
-            href="index-2.html"
+            href="/pages/index-2.html"
             class="absolute top-4.5 right-2 flex h-8 w-8 items-center justify-center rounded-full bg-black"
             >
-            <img class="h-5" src="./assets/search-white.png" alt="Rechercher" />
+            <img class="h-5" src="/public/search-white.png" alt="Rechercher" />
             </a>
           <span class="font-title mt-2 ml-4 w-full bg-transparent text-black">
             LIMOGES, FRANCE
