--- a/pages/index-6-Femme.html
+++ b/pages/index-6-Femme.html
@@ -10,8 +10,8 @@
   <body class="flex min-h-screen flex-col items-center">
     <header class="flex w-full flex-row items-center justify-between px-8 py-4">
       <section class="flex items-center">
-        <a href="./index-3.html">
-          <img class="h-12" src="./assets/Logo_galeries_lafayette-removebg-preview 1.png" alt="Logo" />
+        <a href="/pages/index-3.html">
+          <img class="h-12" src="/public/Logo_galeries_lafayette-removebg-preview 1.png" alt="Logo" />
         </a>
         <nav class="ml-8">
           <ul class="flex flex-row space-x-6">
@@ -24,76 +24,76 @@
       <aside class="flex items-center space-x-4">
         <form class="bg-primary border-sub flex items-center rounded border px-2 py-1">
           <input class="bg-primary font-roboto max-w-fit outline-none" type="text" placeholder="Marques, catégories, articles..." />
-          <button type="submit"><img class="ml-2 h-5" src="./assets/search.png" alt="Rechercher" /></button>
+          <button type="submit"><img class="ml-2 h-5" src="/public/search.png" alt="Rechercher" /></button>
         </form>
-        <button aria-label="Profil"><img class="h-6" src="./assets/profile.png" alt="Profil" /></button>
-        <button aria-label="Panier"><img class="h-6" src="./assets/cart.png" alt="Panier" /></button>
+        <button aria-label="Profil"><img class="h-6" src="/public/profile.png" alt="Profil" /></button>
+        <button aria-label="Panier"><img class="h-6" src="/public/cart.png" alt="Panier" /></button>
       </aside>
     </header>
 
     <main class="mx-auto mt-12 flex w-full max-w-7xl flex-col items-center">
       <nav class="w-full mb-8 flex items-center">
-        <a href="./index-4-Femme.html" class="flex items-center text-black font-roboto text-lg hover:text-sub rounded px-2 transition-colors duration-150"><span class="text-2xl mr-2">&#8592;</span> Retour</a>
+        <a href="/pages/index-4-Femme.html" class="flex items-center text-black font-roboto text-lg hover:text-sub rounded px-2 transition-colors duration-150"><span class="text-2xl mr-2">&#8592;</span> Retour</a>
       </nav>
 
-      <h1 class="font-title text-6xl font-bold mb-12">CHAUSSURES Femme</h1>
+      <h1 class="font-title text-6xl font-bold mb-12">ACCESSOIRES</h1>
 
       <section class="w-full grid grid-cols-2 md:grid-cols-4 gap-8 mb-12">
         <figure class="flex flex-col items-center">
-          <img src="./assets/Lanvin.svg" alt="Shoe 1" class="w-80 h-80 object-contain bg-border rounded" />
+          <img src="/public/Casquette-jac.svg" alt="Shoe 1" class="w-80 h-80 object-contain bg-border rounded" />
           <figcaption class="flex flex-col mt-25 text-left w-full pl-5">
-          <h2 class="font-title text-2xl mb-2">LANVIN</h2>
-          <span class="text-sub font-roboto">Sneakers Curb</span>
-          <span class="font-title text-2xl font-bold">850,00 €</span>
-          </figcaption>
-        </figure>
-        <figure class="flex flex-col items-center">
-          <img src="./assets/NB.svg" alt="Shoe 2" class="w-80 h-80 object-contain bg-border rounded" />
-          <figcaption class="flex flex-col mt-25 text-left w-full pl-5">
-          <h2 class="font-title text-2xl mb-2">NEW BALANCE</h2>
-          <span class="text-sub font-roboto">740</span>
+          <h2 class="font-title text-2xl mb-2">JACQUEMUS</h2>
+          <span class="text-sub font-roboto">Casquette</span>
           <span class="font-title text-2xl font-bold">120,00 €</span>
           </figcaption>
         </figure>
         <figure class="flex flex-col items-center">
-          <img src="./assets/GoldenGoose-1.svg" alt="Shoe 3" class="w-80 h-80 object-contain bg-border rounded" />
+          <img src="/public/ceinture-off-white-en-polyester-noir-29854968-1_1.jpg-removebg-preview 1.svg" alt="ceinture" class="w-80 h-80 object-contain bg-border rounded" />
           <figcaption class="flex flex-col mt-25 text-left w-full pl-5">
-          <h2 class="font-title text-2xl mb-2">GOLDEN GOOSE</h2>
-          <span class="text-sub font-roboto">Baskets basses Super Stan en cuir</span>
-          <span class="font-title text-2xl font-bold">589,00 €</span>
+          <h2 class="font-title text-2xl mb-2">OFF-WHITE</h2>
+          <span class="text-sub font-roboto">Ceinture souple</span>
+          <span class="font-title text-2xl font-bold">195,00 €</span>
           </figcaption>
         </figure>
         <figure class="flex flex-col items-center">
-          <img src="./assets/GoldenGoose-2.svg" alt="Shoe 4" class="w-80 h-80 object-contain bg-border rounded" />
+          <img src="/public/ami-casquette-black-1-removebg-preview 1.svg" alt="Casquette AMI" class="w-80 h-80 object-contain bg-border rounded" />
           <figcaption class="flex flex-col mt-25 text-left w-full pl-5">
-          <h2 class="font-title text-2xl mb-2">GOLDEN GOOSE</h2>
-          <span class="text-sub font-roboto">Baskets basses Super Stan en cuir</span>
-          <span class="font-title text-2xl font-bold">490,00 €</span>
+          <h2 class="font-title text-2xl mb-2">AMI PARIS</h2>
+          <span class="text-sub font-roboto">Casquette Broderie</span>
+          <span class="font-title text-2xl font-bold">130,00 €</span>
+          </figcaption>
+        </figure>
+        <figure class="flex flex-col items-center">
+          <img src="/public/Casquette-Prada.png" alt="Casquette-Prada" class="w-80 h-80 object-contain bg-border rounded" />
+          <figcaption class="flex flex-col mt-25 text-left w-full pl-5">
+          <h2 class="font-title text-2xl mb-2">PRADA</h2>
+          <span class="text-sub font-roboto">Casquette de baseball</span>
+          <span class="font-title text-2xl font-bold">520,00 €</span>
           </figcaption>
         </figure>
       </section>
 
       <section class="w-full grid grid-cols-2 md:grid-cols-4 gap-8 mb-12">
-        <figure class="col-span-2 md:col-span-2 bg-ele-alt rounded-lg p-8 flex flex-col justify-center items-start">
-          <img src="./assets/Jean.svg" alt="Officewear" class="w-full h-64 object-cover rounded mb-4" />
-          <h2 class="font-title text-primary text-2xl mb-2">OFFICEWEAR</h2>
-          <p class="font-roboto text-primary mb-4">Incontournable à chaque rentrée, la tendance office Wear est de retour !</p>
+        <figure class="col-span-2 md:col-span-2 bg-ele-green rounded-lg p-8 flex flex-col justify-center items-start">
+          <img src="/public/Roux.svg" alt="Officewear" class="w-full h-64 object-cover rounded mb-4" />
+          <h2 class="font-title text-primary text-2xl mb-2">COLOR BLOCK</h2>
+          <p class="font-roboto text-primary mb-4">La nature se pare de couleurs d'automne et notre vestiaire aussi !</p>
           <a href="#" class="bg-primary text-black font-title rounded-full px-6 py-2">découvrir</a>
         </figure> 
         <figure class="flex flex-col items-center">
-          <img src="./assets/Clarks-1.svg" alt="Clarks-1" class="w-80 h-80 object-contain bg-border rounded" />
+          <img src="/public/echarpe.svg" alt="Echarpe" class="w-80 h-80 object-contain bg-border rounded" />
           <figcaption class="flex flex-col mt-25 text-left w-full pl-5">
-          <h2 class="font-title text-2xl mb-2">CLARKS</h2>
-          <span class="text-sub font-roboto">Wallabee</span>
+          <h2 class="font-title text-2xl mb-2">JACQUEMUS</h2>
+          <span class="text-sub font-roboto">L'écharpe Jacquemus</span>
           <span class="font-title text-2xl font-bold">150,00 €</span>
           </figcaption>
         </figure>
         <figure class="flex flex-col items-center ">
-          <img src="./assets/Clarks-2.svg" alt="Clarks-2" class="w-80 h-80 object-contain bg-border rounded" />
+          <img src="/public/Lunettes.svg" alt="Lunettes" class="w-80 h-80 object-contain bg-border rounded" />
           <figcaption class="flex flex-col pl-5 mt-25 text-left w-full">
-          <h2 class="font-title text-2xl mb-2">CLARKS</h2>
-          <span class="font-roboto text-sub">Wallabee en cuir</span>
-          <span class="font-title text-2xl font-bold">180,00 €</span>
+          <h2 class="font-title text-2xl mb-2">TIFFANY & CO</h2>
+          <span class="font-roboto text-sub">Lunettes de soleil</span>
+          <span class="font-title text-2xl font-bold">349,00 €</span>
           </figcaption>
         </figure>
       </section>
@@ -175,18 +175,18 @@
           <ul class="flex flex-row gap-4">
            
             <li class="flex flex-col items-center">
-              <a class="bg-primary rounded-2xl " href="#"><img src="./assets/Facebook.png" alt="Facebook" class="h-6 w-6" /></a>
+              <a class="bg-primary rounded-2xl " href="#"><img src="/public/Facebook.png" alt="Facebook" class="h-6 w-6" /></a>
             </li>
             <li class="flex flex-col items-center">
-              <a class="bg-primary rounded-2xl" href="#"><img src="./assets/Instagram.png" alt="Instagram" class="h-6 w-6" /></a>
-            </li>
-
-            <li class="flex flex-col items-center">
-              <a class="bg-primary rounded-2xl" href="#"><img src="./assets/pinterest-p.svg" alt="Pinterest" class="h-6 w-6" /></a>
+              <a class="bg-primary rounded-2xl" href="#"><img src="/public/Instagram.png" alt="Instagram" class="h-6 w-6" /></a>
             </li>
 
             <li class="flex flex-col items-center">
-              <a class="bg-primary rounded-2xl" href="#"><img src="./assets/tiktok.svg" alt="TikTok" class="h-6 w-6" /></a>
+              <a class="bg-primary rounded-2xl" href="#"><img src="/public/pinterest-p.svg" alt="Pinterest" class="h-6 w-6" /></a>
+            </li>
+
+            <li class="flex flex-col items-center">
+              <a class="bg-primary rounded-2xl" href="#"><img src="/public/tiktok.svg" alt="TikTok" class="h-6 w-6" /></a>
             </li>
             
           </ul>
