--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </a>
         <nav class="ml-8">
           <ul class="flex flex-row space-x-6">
-            <li class="font-title text-2xl"><a href="#">FAVORISSSSS</a></li>
+            <li class="font-title text-2xl"><a href="#">FAVORIS</a></li>
             <li class="font-title text-2xl"><a href="#">HOMME</a></li>
             <li class="font-title text-2xl"><a href="#">FEMME</a></li>
           </ul>
